objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client owns fix</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated - Client</fullName>
        </values>
        <values>
            <fullName>Escalated - RichRelevance</fullName>
        </values>
        <values>
            <fullName>Feature Request</fullName>
        </values>
        <values>
            <fullName>Jira Completed</fullName>
        </values>
        <values>
            <fullName>Jira in Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Responsive</fullName>
        </values>
        <values>
            <fullName>On record with Client_AM</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending - Client</fullName>
        </values>
        <values>
            <fullName>Pending - RichRelevance</fullName>
        </values>
        <values>
            <fullName>Spam%2FDuplicate%2FTest</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Account.Owner.FirstName    &amp; &quot;  &quot; &amp;    Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this support case should be billed to the client.</description>
        <inlineHelpText>Check this box if this support case should be billed to the client.</inlineHelpText>
        <label>Billable Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Reference__c</fullName>
        <formula>&quot;ref:_&quot; + LEFT( $Organization.Id, 4) &amp; &quot;0&quot; &amp; IF (MID ( $Organization.Id, 5, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 11), IF (MID ( $Organization.Id, 6, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 10), IF (MID ( $Organization.Id, 7, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 9), IF (MID ( $Organization.Id, 8, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 8), IF (MID ( $Organization.Id, 9, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 7), IF (MID ( $Organization.Id, 10, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 6), IF (MID ( $Organization.Id, 11, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 5), IF (MID ( $Organization.Id, 12, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 4), IF (MID ( $Organization.Id, 13, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 3), IF (MID ( $Organization.Id, 14, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 2), &quot;&quot;) ) ) ) ) ) ) ) ) ) &amp; &quot;._&quot; &amp; LEFT( Id, 4) &amp; &quot;0&quot; &amp; IF (MID ( Id, 5, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 11), IF (MID ( Id, 6, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 10), IF (MID ( Id, 7, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 9), IF (MID ( Id, 8, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 8), IF (MID ( Id, 9, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 7), IF (MID ( Id, 10, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 6), IF (MID ( Id, 11, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 5), IF (MID ( Id, 12, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 4), IF (MID ( Id, 13, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 3), IF (MID ( Id, 14, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 2) , &quot;&quot;) ) ) ) ) ) ) ) ) ) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Reference #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Estimate_from_Dev_Ops__c</fullName>
        <description>This is to be used for Level 1 or Level 2 issues, and provides a date and time estimate by which Dev or Ops anticipates resolving the issue.  You can use this as an estimate for client communications.</description>
        <inlineHelpText>This is to be used for Level 1 or Level 2 issues, and provides a date and time estimate by which Dev or Ops anticipates resolving the issue.  You can use this as an estimate for client communications.</inlineHelpText>
        <label>Case Resolution Estimate from Dev/Ops</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Initially_Contacted_Time__c</fullName>
        <formula>if (CreatedDate&lt;= Client_Initially_Contacted__c , (Client_Initially_Contacted__c  -  CreatedDate) * 24,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Initially Contacted Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Initially_Contacted__c</fullName>
        <description>This is the date that the client was initially contacted after the case was submitted.  This is not the auto response date.</description>
        <inlineHelpText>This is the date that the client was initially contacted after the case was submitted.  This is not the auto response date.</inlineHelpText>
        <label>Client Initially Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Reason__c</fullName>
        <label>Contact Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spam/Duplicate/Test</fullName>
                </value>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Consult/Investigate</fullName>
                    <default>true</default>
                    <label>Consult/Investigate</label>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Standup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if we should track on the Daily Stand-up</description>
        <inlineHelpText>Check this box if we should track on the Daily Stand-up</inlineHelpText>
        <label>Daily Standup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enter_comments_if_type_is_other__c</fullName>
        <description>This is a free form field used on the case object to add comments if the case type is other</description>
        <inlineHelpText>Please enter details on the case if it does not fit a standard definition and you have selected &quot;other&quot;.</inlineHelpText>
        <label>Enter comments if type is other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Open__c</fullName>
        <description>Determines the number of hours that have elapsed since the case was created</description>
        <formula>(Now() -  CreatedDate) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Since Open</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_Resolve__c</fullName>
        <description>Time from open to close of a case. or zero if still open</description>
        <formula>IF( IsClosed  ,   (ClosedDate - CreatedDate )*24 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time from open to close of a case. or zero if still open</inlineHelpText>
        <label>Hours to Resolve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Cause__c</fullName>
        <inlineHelpText>Why did we have to take care of this?</inlineHelpText>
        <label>Issue Cause</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Feed/Data</fullName>
                </value>
                <value>
                    <fullName>Instrumentation</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Product Maturity</fullName>
                </value>
                <value>
                    <fullName>rrBug/Regression/Code/ENG</fullName>
                </value>
                <value>
                    <fullName>Operates as normal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rules and Strategies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <inlineHelpText>Describe why we had to take care of this.</inlineHelpText>
        <label>Issue Description</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Did not do, Did not complete</fullName>
                </value>
                <value>
                    <fullName>Incorrect, unclear</fullName>
                </value>
                <value>
                    <fullName>Not available</fullName>
                </value>
                <value>
                    <fullName>Part of contract, agreement</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Resolution__c</fullName>
        <inlineHelpText>What did we find out or do?</inlineHelpText>
        <label>Issue Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client to fix</fullName>
                </value>
                <value>
                    <fullName>Could not reproduce</fullName>
                </value>
                <value>
                    <fullName>Functioning as designed</fullName>
                </value>
                <value>
                    <fullName>Issue identified</fullName>
                </value>
                <value>
                    <fullName>Report Created</fullName>
                </value>
                <value>
                    <fullName>Request Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <description>Recommendations are not showing &quot;REF&quot; before the ticket price, this is required for Trading Standards</description>
        <inlineHelpText>This field is used for reporting.  Enter a short description of the issue.</inlineHelpText>
        <label>Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Issue_Tyoe__c</fullName>
        <description>This is required to create a JIRA ticket from Salesforce.</description>
        <inlineHelpText>This is required to create a JIRA ticket from Salesforce.</inlineHelpText>
        <label>JIRA Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                    <default>true</default>
                    <label>Bug</label>
                </value>
                <value>
                    <fullName>MMF</fullName>
                </value>
                <value>
                    <fullName>Technical Debt</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JIRA_Priority__c</fullName>
        <description>This is required when creating a JIRA ticket.  Defaults to Normal and can be changed.</description>
        <inlineHelpText>This is required when creating a JIRA ticket.  Defaults to Normal and can be changed.</inlineHelpText>
        <label>JIRA Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Blocker</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                    <default>true</default>
                    <label>Minor</label>
                </value>
                <value>
                    <fullName>Trivial</fullName>
                </value>
                <value>
                    <fullName>Rush</fullName>
                </value>
                <value>
                    <fullName>Time Permitting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira__c</fullName>
        <description>Jira</description>
        <inlineHelpText>Jira</inlineHelpText>
        <label>Jira</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindTouch_Username__c</fullName>
        <formula>Contact.Email</formula>
        <label>MindTouch Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Billable_Hours__c</fullName>
        <description>this is the new NUMBER format for the new Salesforce - allows to SUM total versus the old TEXT field</description>
        <inlineHelpText>Use this Field with the NEW Salesforce.</inlineHelpText>
        <label>No. of Billable Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plus_Platinum_Hours__c</fullName>
        <description>Use this field to track the number of hours used for Plus and Platinum. Plus Equals eight hours per month. Platinum equal 16 hours per month. Hours spent  above the allotment are charged at the customers professional services rate.</description>
        <inlineHelpText>Enter the number of hours used in increments of 1/2 hour, for example:
.50=30 minutes, if more than 30 minutes, round up to the next hour.  Hours over the monthly allotment are charged at the professional services hourly rate.</inlineHelpText>
        <label>Plus/Platinum Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_CaseId__c</fullName>
        <label>Previous CaseId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Case_Number__c</fullName>
        <description>The Previous Case # in the old Salesforce</description>
        <label>Previous Case Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spam/Duplicate/Test</fullName>
                </value>
                <value>
                    <fullName>Recommend</fullName>
                    <default>true</default>
                    <label>Recommend</label>
                </value>
                <value>
                    <fullName>Advanced merchandising</fullName>
                </value>
                <value>
                    <fullName>Recommend - Email</fullName>
                </value>
                <value>
                    <fullName>Recommend - BYOS/BYOA</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Engage - Email</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Type Ahead Search</fullName>
                </value>
                <value>
                    <fullName>Find</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Training(Litmos / RR university)</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the work completed is on the Rate Card.  If we are billing for the work, enter the No. of Billable Hours and check the Billable Hours box.</inlineHelpText>
        <label>Rate Card Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <inlineHelpText>Use this field to type the person&apos;s name manually.  For example, the Jira was open by an internal person, but the case is logged under the Account Name.  Not required.</inlineHelpText>
        <label>Requester</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_SLA__c</fullName>
        <formula>Resolution_Status_Image1__c + &quot; &quot;  +  Resolution_Status1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Status1__c</fullName>
        <description>Shows status against resolution time SLA</description>
        <formula>IF(NOT(IsClosed) , 
( IF(Hours_Since_Open__c &gt;= 96, &quot;Red&quot;, 
IF(Hours_Since_Open__c &gt;= 72, &quot;Yellow&quot;, &quot;Green&quot;) ) ), 
IF(((ClosedDate - CreatedDate) * 24) &gt;= 96, &quot;Red [closed]&quot;, 
IF(((ClosedDate - CreatedDate) * 24) &gt;= 72, &quot;Yellow [closed]&quot;, &quot;Green [closed]&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>https://confluence.richrelevance.com/confluence/display/RM/Case+Alerts</inlineHelpText>
        <label>Resolution Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Status_Image1__c</fullName>
        <description>Shows status against resolution time SLA as image</description>
        <formula>CASE(  Resolution_Status1__c  , 
&quot;Green&quot;, IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.ImageServer?id=01570000001ecCM&amp;oid=00D700000009H7i&quot;, &quot;Green&quot;), 
&quot;Yellow&quot;, IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.ImageServer?id=01570000001ecCW&amp;oid=00D700000009H7i&quot;, &quot;Yellow&quot;), 
&quot;Green [closed]&quot;, IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.ImageServer?id=01570000001ecCM&amp;oid=00D700000009H7i&quot;, &quot;Green&quot;), 
&quot;Yellow [closed]&quot;, IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.ImageServer?id=01570000001ecCW&amp;oid=00D700000009H7i&quot;, &quot;Yellow&quot;), 
IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.ImageServer?id=01570000001ecCR&amp;oid=00D700000009H7i&quot;, &quot;Red&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Status Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>This field is used for reporting.  Enter how the issued was resolved.</description>
        <inlineHelpText>This field is used for reporting.  Enter how the issued was resolved.</inlineHelpText>
        <label>Resolution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_by__c</fullName>
        <description>This fields tracks which group ultimately solved the issue.  Multi-select is allowed.</description>
        <inlineHelpText>Resolution will default to Customer Support.  If we completed 75% of the work on the ticket, assign to us.  If multiple groups were required to resolve the issue include all groups.  Select CSE or OPS if they did all or the majority of the work.</inlineHelpText>
        <label>Resolved by</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Partner/Third Party Vender</fullName>
                </value>
                <value>
                    <fullName>rrENGSUP</fullName>
                </value>
                <value>
                    <fullName>rrOPS</fullName>
                </value>
                <value>
                    <fullName>rrSquad</fullName>
                </value>
                <value>
                    <fullName>rrLift</fullName>
                </value>
                <value>
                    <fullName>rrClientHealth</fullName>
                </value>
                <value>
                    <fullName>rrClientSuccess – Resilience</fullName>
                    <default>true</default>
                    <label>rrClientSuccess – Resilience</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_SLA__c</fullName>
        <formula>Response_Status_Image1__c  + &quot; &quot; +  Response_Status1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Status1__c</fullName>
        <description>Shows status against response time SLA</description>
        <formula>IF(ISPICKVAL( Status , &quot;New&quot;), 
( IF(Hours_Since_Open__c  &gt;= 20, &quot;Red&quot;, 
    IF(Hours_Since_Open__c  &gt;= 14, &quot;Yellow&quot;, &quot;Green&quot;) ) ), 
 IF(((CreatedDate -  Client_Initially_Contacted__c) * 24) &gt;= 20, &quot;Red [responded]&quot;, 
    IF(((CreatedDate -  Client_Initially_Contacted__c) * 24) &gt;= 14, &quot;Yellow [responded]&quot;,
    IF(  ISBLANK(Client_Initially_Contacted__c) , &quot;no response&quot;, &quot;Green [responded]&quot;) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Status_Image1__c</fullName>
        <description>Shows status against response time SLA as image</description>
        <formula>CASE( Response_Status1__c , 
&quot;Green&quot;, IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.ImageServer?id=01570000001ecCM&amp;oid=00D700000009H7i&quot;, &quot;Green&quot;), 
&quot;Yellow&quot;, IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.ImageServer?id=01570000001ecCW&amp;oid=00D700000009H7i&quot;, &quot;Yellow&quot;),
&quot;Green [responded]&quot;, IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.ImageServer?id=01570000001ecCM&amp;oid=00D700000009H7i&quot;, &quot;Green&quot;), 
&quot;Yellow [responded]&quot;, IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.ImageServer?id=01570000001ecCW&amp;oid=00D700000009H7i&quot;, &quot;Yellow&quot;),
IMAGE(&quot;https://c.na5.content.force.com/servlet/servlet.ImageServer?id=01570000001ecCR&amp;oid=00D700000009H7i&quot;, &quot;Red&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>https://confluence.richrelevance.com/confluence/display/RM/Case+Alerts</inlineHelpText>
        <label>Response Status Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Actions__c</fullName>
        <description>This field is used for our Root Cause Analysis reports</description>
        <inlineHelpText>This field is used for our Root Cause Analysis reports.  State the current Actions in play to find the root cause.</inlineHelpText>
        <label>Root Cause Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>Account.Sales_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sev_1_2_Duration__c</fullName>
        <description>use this field to enter the number of hours a sev 1 or 2 was open</description>
        <inlineHelpText>use this field to enter the number of hours a sev 1 or 2 was open</inlineHelpText>
        <label>Sev 1/2 Duration</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sev_1_2_Remediation__c</fullName>
        <description>Enter the number of hours the client was impacted before service was remediated with a work around or temp fix.</description>
        <inlineHelpText>Enter the number of hours the client was impacted before service was remediated with a work around or temp fix.</inlineHelpText>
        <label>Sev 1/2 Remediation</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>Cases(Solutions)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <formula>TEXT(Account.Support_Package__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Region__c</fullName>
        <formula>text(Account.Support_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hours_on_Case__c</fullName>
        <description>Rounded to 30 minute increments (.5) for all time spent to resolve a case, including reading, responding, documenting the issue and includes time of all {rr} resources involved in the case.</description>
        <inlineHelpText>Rounded to 30 minute increments (.5) for all time spent to resolve a case, including reading, responding, documenting the issue and includes time of all {rr} resources involved in the case.</inlineHelpText>
        <label>Hours on Case</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Who_caused_the_issue__c</fullName>
        <label>Who caused the issue?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spam/Duplicate/Test</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                    <default>true</default>
                    <label>Client</label>
                </value>
                <value>
                    <fullName>Partner or 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Client Service / RR</fullName>
                </value>
                <value>
                    <fullName>ENG Bug</fullName>
                </value>
                <value>
                    <fullName>Ops</fullName>
                </value>
                <value>
                    <fullName>N/A (admin/alert)</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Operates as Expected</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Billable_Hours__c</fullName>
        <description>OLD_Enter the number of billable hours spent on this case.</description>
        <inlineHelpText>OLD_changed this field for the new Salesforce. Enter the number of billable hours spent on this case.</inlineHelpText>
        <label># of Billable Hours</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>round_robin__c</fullName>
        <formula>mod(VALUE(CaseNumber),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>round robin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Existing_Case</fullName>
        <active>true</active>
        <businessProcess>Standard Case</businessProcess>
        <description>Use to view or edit cases and only run through assignment rules on demand</description>
        <label>Existing Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Case</fullName>
        <active>true</active>
        <businessProcess>Standard Case</businessProcess>
        <description>Use to create a new case to run through assignment rules</description>
        <label>New Case</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>If_Case_Type_is_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(Enter_comments_if_type_is_other__c),
ISPICKVAL(Type,&quot;Other&quot;))</errorConditionFormula>
        <errorMessage>Please add comments if Case Type is &quot;Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Contacted_for_Open_Cases</fullName>
        <active>true</active>
        <description>Require a Contacted date to move into the Open Status</description>
        <errorConditionFormula>ISPICKVAL( Status , &quot;Open&quot;)  &amp;&amp;   ISNULL(Client_Initially_Contacted__c)</errorConditionFormula>
        <errorMessage>You cannot move a case into an Open status before contacting the client. Please update the Client Initially Contacted field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Severity</fullName>
        <active>false</active>
        <description>Severity must be Populated</description>
        <errorConditionFormula>OR( NOT(ISPICKVAL( Priority , &quot;Sev 1&quot;)),  NOT(ISPICKVAL(Priority , &quot;Sev 2&quot;)),  NOT(ISPICKVAL(Priority , &quot;Sev 3&quot;)),  NOT(ISPICKVAL(Priority , &quot;Sev 4&quot;)))</errorConditionFormula>
        <errorDisplayField>Priority</errorDisplayField>
        <errorMessage>Severity must be filled out</errorMessage>
    </validationRules>
</CustomObject>